# binaryninja-ebpf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  arch_ebpf.cpp  disassembler.cpp  disassembler.h  il.cpp  il.h  opcodes.h  syscalls.cpp  syscalls.h  util.h
